# Index_PDF_Translation

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  app.py  config.py  demo_app.py  manual_translate_pdf.py  objective_DB_config.py  pyproject.toml  readme.md  requirements.txt  test.py  translate_pdf.py
.github/: FUNDING.yml
.github/workflows/: test.yml
data/: license.json
docs/: plan-issue25-google-translate.md
docs/architecture/: block-detection-algorithm.md
docs/plan/: issue-28-debug-visualization.md  issue-31-block-classification-improvement.md  issue-38-parseddocument-pipeline.md  library-migration-plan.md  plan-issue25-google-translate.md  pypdfium2-migration-plan.md  refactoring-plan.md
docs/plan/archive/: issue-38-parseddocument-pipeline.md
docs/plans/: issue-28-debug-visualization.md
docs/research/: document-layout-analysis-survey.md  pymupdf-alternative-investigation.md
docs/research/evaluations/: deepseek-vl2-evaluation.md  doclayout-yolo-evaluation.md  pymupdf4llm-evaluation.md
docs/research/layout-analysis/: data-extraction-comparison.md  document-layout-analysis-survey.md
docs/research/layout-analysis/evaluations/: pp-doclayout-evaluation.md  pymupdf4llm-evaluation-results.md  yolo-doclaynet-evaluation.md
fonts/: IPA_Font_License_Agreement_v1.0.txt
modules/: arxiv_api.py  backblaze_api.py  database.py  generate_fixed_key.py  logger.py  pdf_edit.py  spacy_api.py  translate.py  translate_llm.py
scripts/: evaluate_deepseek_vl2.py  evaluate_doclayout_yolo.py  evaluate_layout.py  test_pymupdf4llm_features.py
spacy/models/en_core_web_sm-3.7.1/: MANIFEST.in  meta.json  setup.py
spacy/models/en_core_web_sm-3.7.1/en_core_web_sm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
spacy/models/en_core_web_sm-3.7.1/en_core_web_sm/en_core_web_sm-3.7.1/: README.md  accuracy.json
spacy/models/ja_core_news_sm-3.7.0/: README.md
spacy/models/ja_core_news_sm-3.7.0/ja_core_news_sm/: __init__.py  meta.json
spacy/models/ja_core_news_sm-3.7.0/ja_core_news_sm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spacy/models/ja_core_news_sm-3.7.0/ja_core_news_sm/ja_core_news_sm-3.7.0/: accuracy.json
src/index_pdf_translation/: __init__.py  _version.py  cli.py  config.py
src/index_pdf_translation/core/: __init__.py  pdf_edit.py  translate.py
src/index_pdf_translation/nlp/: __init__.py  tokenizer.py
src/index_pdf_translation/resources/: __init__.py
src/index_pdf_translation/resources/data/: __init__.py
src/index_pdf_translation/resources/fonts/: __init__.py
src/index_pdf_translation/translators/: __init__.py  base.py  deepl.py  google.py  openai.py
tests/: conftest.py  test_config.py  test_pdf_extract.py  test_resources.py  test_translate.py  test_translators.py
tests/evaluation/: evaluate_pp_doclayout.py  evaluate_yolo_doclaynet.py  verify_pypdfium2_targeted_removal.py  verify_pypdfium2_text_insertion.py  verify_pypdfium2_text_insertion_raw.py  verify_pypdfium2_text_insertion_v2.py  verify_pypdfium2_text_removal.py
tests/evaluation/fixtures/: README.md
tests/evaluation/outputs/: doclayout_yolo_summary.md  evaluation_summary.md
tests/evaluation/outputs/DeepSeek_VL2/: evaluation_summary.json
tests/evaluation/outputs/DeepSeek_VL2/sample_autogen/: page_000_layout.txt  page_000_ocr.txt  results.json
tests/evaluation/outputs/DeepSeek_VL2/sample_cot/: page_000_layout.txt  page_000_ocr.txt  results.json
tests/evaluation/outputs/DeepSeek_VL2/sample_llama/: page_000_layout.txt  page_000_ocr.txt  results.json
tests/evaluation/outputs/DocLayout_YOLO/2201.11903v6/: blocks.json  metadata.json
tests/evaluation/outputs/DocLayout_YOLO/2302.13971v1/: blocks.json  metadata.json
tests/evaluation/outputs/DocLayout_YOLO/2308.08155v2/: blocks.json  metadata.json
tests/evaluation/outputs/PP_DocLayout/: evaluation_summary.md
tests/evaluation/outputs/YOLO_DocLayNet/: evaluation_summary.md
tests/evaluation/outputs/pypdfium2_verification/: targeted_removal_results.json  text_insertion_raw_results.json  text_insertion_results.json  text_insertion_v2_results.json  verification_results.json
tests/fixtures/: ATTRIBUTION.md  extract_first_page.py
(+58 files in other folders)
